Bug 348510 - kdeinit5 crashes when running a command on lock screen
Summary: kdeinit5 crashes when running a command on lock screen
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knotifications
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Martin Klapetek
URL:
Keywords:
: 349667 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-31 17:50 UTC by Jan Wiele
Modified: 2015-07-28 13:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12
Sentry Crash Report:


Attachments
crashlog of kdeinit5 when running a command on lock (3.27 KB, text/plain)
2015-05-31 17:50 UTC, Jan Wiele
Details
crashlog of kdeinit5 when running a command on lock with libkf5notifications5-dbg:amd64 (3.71 KB, text/plain)
2015-06-01 11:19 UTC, Jan Wiele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Wiele 2015-05-31 17:50:49 UTC
Created attachment 92939 [details]
crashlog of kdeinit5 when running a command on lock

Hi, I'm running a command when the screen gets locked or unlocked (turning off/on my lights in the room :D). Since my upgrade to Plasma 5 (from 4.x) this will crash kdeinit5 :(.

The command entered in "Notifications" -> "Screensaver" for turning the light off is:
/usr/bin/python /home/jan/scripts/netio/netio.py 4 off


The kcrashlog is attached.
Comment 1 David Faure 2015-05-31 19:41:33 UTC
crash in KNotifications -> reassigning
Comment 2 Martin Klapetek 2015-06-01 07:40:11 UTC
Thanks for the report

Can you please install debug symbols for libKF5Notifications and post an updated backtrace?
Comment 3 Jan Wiele 2015-06-01 11:19:26 UTC
Created attachment 92947 [details]
crashlog of kdeinit5 when running a command on lock with libkf5notifications5-dbg:amd64
Comment 4 Martin Klapetek 2015-06-01 13:22:58 UTC
Git commit a999bc1c4087fbc5288873193af86b4f739116e3 by Martin Klapetek.
Committed on 01/06/2015 at 13:22.
Pushed by mklapetek into branch 'master'.

Fix crash in NotifyByExecute when no widget has been set

REVIEW: 123975
FIXED-IN: 5.12

M  +1    -0    src/knotification.cpp
M  +6    -4    src/notifybyexecute.cpp

http://commits.kde.org/knotifications/a999bc1c4087fbc5288873193af86b4f739116e3
Comment 5 Jan Wiele 2015-06-01 13:51:42 UTC
Hi Martin,
thanks for this fast fix! :)

Is there some way i can avoid this crash until I receive the updated packages ?
Comment 6 Martin Klapetek 2015-06-01 14:06:38 UTC
I'm afraid not, at least not without some compiling (which would not be too hard on Kubuntu).

Sorry.
Comment 7 Martin Klapetek 2015-07-28 13:04:32 UTC
*** Bug 349667 has been marked as a duplicate of this bug. ***