Fix crash in NotifyByExecute when no widget has been set

REVIEW: 123975
BUG: 348510
FIXED-IN: 5.12